# diff-gaussian-rasterization

./: .gitignore  CMakeLists.txt  README.md  ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py  test.py
cuda_rasterizer/: forward.cu  forward.h  forward_with_contrib.cu  forward_with_contrib.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
diff_gaussian_rasterization/: __init__.py
